save host_ptr when create sub buffer from CL_MEM_ALLOC_HOST_PTR

it fixes issue at https://bugs.freedesktop.org/show_bug.cgi?id=98490

Signed-off-by: Guo, Yejun <yejun.guo@intel.com>
Reviewed-by: Pan Xiuli <xiuli.pan@intel.com>